--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a class="topGithubLink" href="https://github.com/rigganhart" target="_blank"><h2><i class="fa fa-github-square" aria-hidden="true"></i></h2></a>
             <a class="topGithubLink" href="https://www.linkedin.com/in/rigganhart" target="_blank"><h2><i class="fa fa-linkedin-square" aria-hidden="true"></i></h2></a>
             </div>
+            <h4>Front End Developer</h4>
             <h3>Solving problems through programming</h3>
         </div>
         <div class="main row ">
