corrected spelling and grammar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     </p>
                     <p>
-                      Try a demo version <a href="http://family-first-demo.herokuapp.com/#/medication" target="_blank" >Here</a>
+                      Try a demo version <a href="http://family-first-demo.herokuapp.com/#/login" target="_blank" >Here</a>
                     </p>
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
@@ -121,10 +121,10 @@
                     <h2>Apitunes</h2>
                     <a class="githublink" href="https://github.com/APitunesGroup/APitunes" target="_blank"><img src="images/logos-github-icon.png" alt="" /></a>
                     <p>
-                      Apitunes was a weekend group project useing angular on frontend and many to one relationships in java
+                      Apitunes was a weekend group project using angular on the front end and many to one relationships in java on the back end.
                     </p>
                     <p>
-                      We wanted to create a place for artists to upload thier songs for the community to listen to them and up/down vote on the songs.
+                      We wanted to create a place for artists to upload their songs for the community to listen to them and up/down vote on the songs.
                     </p>
                     It is designed so that only artists can upload songs, but anyone can vote for songs.
                     <div class="techStack">
@@ -137,7 +137,7 @@
                     <h2>And Friend...</h2>
                     <a class="githublink" href="https://github.com/rigganhart/friends-app" target="_blank"><img src="images/logos-github-icon.png" alt="" /></a>
                     <p>
-                      And Friend was an assignment to use 'vanilla' Js to make http requests and manipulate the DOM using the Random User API
+                      And Friend was an assignment to use 'vanilla' Js to make http requests and manipulate the DOM using the Random User API.
                         </p>
                         <p>
                           The idea is that a user can create the illusion of having tons of friends by adding or not adding "friends" from a list of random people that is added at a set interval.
@@ -158,10 +158,10 @@
                     <h2>Volunteerism</h2>
                     <a class="githublink" href="https://github.com/rigganhart/volunteerism" target="_blank"><img src="images/logos-github-icon.png" alt="" /></a>
                     <p>
-                      My first time using Node.js and Hapi. The next step is to learn some basic MongoDB.
+                      This was my first time using Node.js and Hapi. The next step is to learn some basic MongoDB.
                         </p>
                         <p>
-The problem with volunteering is we only have a little time and there is alot to volunteer for.                         </p>
+The problem with volunteering is everyone has very little free time, and there are so many opportunities to volunteer.                         </p>
                         <p>
 Volunteerism aims to help people who love to donate their time keep track of all the events they love, and to sign up as well.
                         </p>
