--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <a class="topGithubLink" href="https://github.com/rigganhart" target="_blank"><h2><i class="fa fa-github-square" aria-hidden="true"></i></h2></a>
             <a class="topGithubLink" href="https://www.linkedin.com/in/rigganhart" target="_blank"><h2><i class="fa fa-linkedin-square" aria-hidden="true"></i></h2></a>
             </div>
+            <div class="contact">
+              <h6>P: 757-641-8422</h6>
+              <h6>E: rigganh@gmail.com</h6>
+            </div>
             <h3>Solving problems through programming</h3>
         </div>
         <div class="main row ">
@@ -76,12 +80,10 @@
             <div class="aboutContainer small-11 medium-5 large-5 columns">
                 <div id="family" class="aboutSection small-12">
                     <h2>Family First</h2>
-                    <a class="githublink" href="https://github.com/rigganhart/FamilyFirst" target="_blank"><img src="images/logos-github-icon.png" alt="" /></a>
+                    <a class="githublink" href="https://github.com/rigganhart/FamilyFirst" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
                         Family First combines a simple UI with easy automation and encryption to help keep track of all the tasks associated with caring for a loved one. </p>
-                    <p>
-                        There are two views: Tasks and Medications.
-                    </p>
+                    
                     <p>
                         The Tasks view allows users to add tasks throughout the day as needed. Tasks are automatically removed after 24hrs to reduce clutter.
 
@@ -95,13 +97,13 @@
                     </p>
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
-                        <img src="images/angularjs-stacked1.png" alt="" /><img src="images/foundationlogo.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg.png" alt="" /><img src="images/gulp.png" alt="" /><img src="images/seal-color-aef0354c.png"
+                        <img src="images/angularjs-stacked1-min.png" alt="" /><img src="images/foundationlogo-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png"
                             alt="" />
                     </div>
                 </div>
                 <div id="grind" class="aboutSection small-12 hidden">
                     <h2>Grid Grinder</h2>
-                    <a class="githublink" href="https://github.com/rigganhart/grid-grinder" target="_blank"><img src="images/logos-github-icon.png" alt="" /></a>
+                    <a class="githublink" href="https://github.com/rigganhart/grid-grinder" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
                         Grid Grinder is my introduction to MVC and Backbone. This project made learning Angular much easier.
                       </p>
@@ -114,13 +116,13 @@
                       <h6>Check it out live <a href="http://riggan-grid-grinder.surge.sh/" target="_blank">Here</a></h6>
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
-                        <img src="images/backbone-300x300.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg.png" alt="" /><img src="images/gulp.png" alt="" /><img src="images/seal-color-aef0354c.png"
+                        <img src="images/backbone-300x300-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png"
                             alt="" />
                     </div>
                 </div>
                 <div id="tunes" class="aboutSection small-12 hidden">
                     <h2>Apitunes</h2>
-                    <a class="githublink" href="https://github.com/APitunesGroup/APitunes" target="_blank"><img src="images/logos-github-icon.png" alt="" /></a>
+                    <a class="githublink" href="https://github.com/APitunesGroup/APitunes" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
                       Apitunes was a weekend group project using angular on the front end and many to one relationships in java on the back end.
                     </p>
@@ -130,13 +132,13 @@
                     It is designed so that only artists can upload songs, but anyone can vote for songs.
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
-                        <img src="images/angularjs-stacked1.png" alt="" /><img src="images/foundationlogo.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg.png" alt="" /><img src="images/gulp.png" alt="" /><img src="images/seal-color-aef0354c.png"
+                        <img src="images/angularjs-stacked1-min.png" alt="" /><img src="images/foundationlogo-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png"
                             alt="" />
                     </div>
                 </div>
                 <div id="aF" class="aboutSection small-12 hidden">
                     <h2>And Friend...</h2>
-                    <a class="githublink" href="https://github.com/rigganhart/friends-app" target="_blank"><img src="images/logos-github-icon.png" alt="" /></a>
+                    <a class="githublink" href="https://github.com/rigganhart/friends-app" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
                       And Friend was an assignment to use 'vanilla' Js to make http requests and manipulate the DOM using the Random User API.
                         </p>
@@ -151,13 +153,13 @@
                         </p>
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
-                        <img src="images/js-logo-badge-512.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg.png" alt="" /><img src="images/gulp.png" alt="" /><img src="images/seal-color-aef0354c.png"
+                        <img src="images/js-logo-badge-512-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png"
                             alt="" />
                     </div>
                 </div>
                 <div id="vol" class="aboutSection small-12 hidden">
                     <h2>Volunteerism</h2>
-                    <a class="githublink" href="https://github.com/rigganhart/volunteerism" target="_blank"><img src="images/logos-github-icon.png" alt="" /></a>
+                    <a class="githublink" href="https://github.com/rigganhart/volunteerism" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
                       This was my first time using Node.js and Hapi. The next step is to learn some basic MongoDB.
                         </p>
@@ -169,7 +171,7 @@ Volunteerism aims to help people who love to donate their time keep track of all
 
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
-                        <img src="images/angularjs-stacked1.png" alt="" /><img src="images/nodejs_logo.png" alt="" /><img src="images/hapi.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg.png" alt="" /><img src="images/gulp.png" alt="" /><img src="images/seal-color-aef0354c.png"
+                        <img src="images/angularjs-stacked1-min.png" alt="" /><img src="images/nodejs_logo-min.png" alt="" /><img src="images/hapi-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png"
                             alt="" />
                     </div>
                 </div>
