added mailto for email

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
             <div class="contact">
 
               <h6>P: 757-641-8422</h6>
-              <h6>E: rigganh@gmail.com</h6>
+              <h6>E: <a href="mailto:rigganh@gmail.com?Subject=I%20Like%20Your%20Portfolio" target="_top">rigganh@gmail.com</a></h6>
             </div>
             <h3>Solving problems through programming</h3>
         </div>
