--- a/public/index.html
+++ b/public/index.html
@@ -18,28 +18,47 @@
 </head>
 
 <body>
-    <main>
+    <div data-sticky-container>
+        <div class="small-12 sticky" data-sticky data-options="marginTop: 0">
+            <div class="topBar">
+                <h1>Riggan Hart</h1>
+                <h4>Front End Developer</h4>
+                <div class="icons">
+                    <a class="topGithubLink" href="https://github.com/rigganhart" target="_blank"><h2><i class="fa fa-github-square" aria-hidden="true"></i></h2></a>
+                    <a class="topGithubLink" href="https://www.linkedin.com/in/rigganhart" target="_blank"><h2><i class="fa fa-linkedin-square" aria-hidden="true"></i></h2></a>
+                </div>
+                <div class="contact">
 
-
-        <div class="row topBar">
-            <h1>Riggan Hart</h1>
-            <h4>Front End Developer</h4>
-            <div class="icons">
-            <a class="topGithubLink" href="https://github.com/rigganhart" target="_blank"><h2><i class="fa fa-github-square" aria-hidden="true"></i></h2></a>
-            <a class="topGithubLink" href="https://www.linkedin.com/in/rigganhart" target="_blank"><h2><i class="fa fa-linkedin-square" aria-hidden="true"></i></h2></a>
+                    <h6>P: 757-641-8422</h6>
+                    <h6>E: <a href="mailto:rigganh@gmail.com?subject=I%20enjoyed%20your%20resume%20"></a></h6>
+                </div>
+                <h3>Solving problems through programming</h3>
             </div>
-            <div class="contact">
-
-              <h6>P: 757-641-8422</h6>
-              <h6>E: <a href="mailto:rigganh@gmail.com?Subject=I%20Like%20Your%20Portfolio" target="_top">rigganh@gmail.com</a></h6>
-            </div>
-            <h3>Solving problems through programming</h3>
         </div>
-        <div class="main row ">
+    </div>
+
+
+    <div class="contentContainer">
+
+      <div class="spacing">
+            <h1>About Me</h1>
+        </div>
+        <div class="contentProjects">
+          <div class="myPic small-4 coluns">
+            <img src="images/Riggan Hart 4_Fotor.jpg" alt="" />
+          </div>
+          <p class="small-6 columns">
+            I studied Advertising at Appalachian State University where I received my BS in Communications in 2007. I then worked in automotive sales and as an independent life insurance agent. In 2009 I decided to pursue my love for the outdoors and moved to Vail, Colorado working as a snowboarding instructor for Vail Resorts. During the summers in Vail, I worked as a banquet server for the resort. In 2014 my fiancé and I decided to move to Charleston, SC to be closer to family. I decided to make a career change from hospitality to computer programming for a more stable lifestyle which led me to my studies at The Iron Yard Charleston where I completed the Front End Engineering program in August 2016.
+          </p>
+        </div>
+        <div class="spacing">
+          <h1>Projects</h1>
+        </div>
+        <div class="contentProjects">
             <div class="tileBox small-11 medium-6 large-6 columns">
                 <!-- <h5>Projects</h5> -->
 
-                <a href="#" id="famFirst">
+                <a href="" id="famFirst">
                     <div class="tile famFirst  row ">
                         <!-- <h5>Family First</h5> -->
                     </div>
@@ -49,7 +68,7 @@
                     <div class="three small-8 columns">
 
 
-                        <a href="#" id="ism">
+                        <a href="" id="ism">
                             <div class="tile volunteer row">
 
                                 <!-- <h5>Grid Grinder</h5> -->
@@ -58,12 +77,12 @@
                         <div class=" two row">
 
 
-                            <a href="#" id="friend">
+                            <a href="" id="friend">
                                 <div class="tile andFriend small-6 columns">
                                     <!-- <h5>And Friend...</h5> -->
                                 </div>
                             </a>
-                            <a href="#" id="grid">
+                            <a href="" id="grid">
                                 <div class="tile gridGrind small-6 columns">
                                     <!-- <h5>Flushbook</h5> -->
                                 </div>
@@ -71,7 +90,7 @@
                         </div>
                     </div>
 
-                    <a href="#" id="api">
+                    <a href="" id="api">
                         <div class="tile apiTunes small-4 columns">
                             <!-- <h5>Api-Tunes</h5> -->
                         </div>
@@ -95,7 +114,7 @@
 
                     </p>
                     <p>
-                      Try a demo version <a href="http://family-first-demo.herokuapp.com/#/login" target="_blank" >Here</a>
+                        Try a demo version <a href="http://family-first-demo.herokuapp.com/#/login" target="_blank">Here</a> Login name: "Guest" password: "pass"
                     </p>
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
@@ -108,28 +127,27 @@
                     <a class="githublink" href="https://github.com/rigganhart/grid-grinder" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
                         Grid Grinder is my introduction to MVC and Backbone. This project made learning Angular much easier.
-                      </p>
-                      <p>
+                    </p>
+                    <p>
                         The challenge was to make a grid based game that has a player that moves around a grid, and loses energy each time it moves.
-                      </p>
-                      <p>
+                    </p>
+                    <p>
                         After succeding in movement with energy loss, I added a energy boost and an energy decreasing bad guy. I intend to keep working on this game for practice and fun. Some ideas are: a score boost/decrease and a constantly moving bad guy.
-                      </p>
-                      <h6>Check it out live <a href="http://riggan-grid-grinder.surge.sh/" target="_blank">Here</a></h6>
+                    </p>
+                    <h6>Check it out live <a href="http://riggan-grid-grinder.surge.sh/" target="_blank">Here</a></h6>
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
-                        <img src="images/backbone-300x300-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png"
-                            alt="" />
+                        <img src="images/backbone-300x300-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png" alt="" />
                     </div>
                 </div>
                 <div id="tunes" class="aboutSection small-12 hidden">
                     <h2>Apitunes</h2>
                     <a class="githublink" href="https://github.com/APitunesGroup/APitunes" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
-                      Apitunes was a weekend group project using angular on the front end and many to one relationships in java on the back end.
+                        Apitunes was a weekend group project using angular on the front end and many to one relationships in java on the back end.
                     </p>
                     <p>
-                      We wanted to create a place for artists to upload their songs for the community to listen to them and up/down vote on the songs.
+                        We wanted to create a place for artists to upload their songs for the community to listen to them and up/down vote on the songs.
                     </p>
                     It is designed so that only artists can upload songs, but anyone can vote for songs.
                     <div class="techStack">
@@ -142,44 +160,50 @@
                     <h2>And Friend...</h2>
                     <a class="githublink" href="https://github.com/rigganhart/friends-app" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
-                      And Friend was an assignment to use 'vanilla' Js to make http requests and manipulate the DOM using the Random User API.
-                        </p>
-                        <p>
-                          The idea is that a user can create the illusion of having tons of friends by adding or not adding "friends" from a list of random people that is added at a set interval.
-                        </p>
-                        <p>
-                          Planned additions are a random hobby genereator that will assign each user a random hobby out of a set of 10 hobbies.
-                        </p>
-                        <p>
-                          Check it out live <a href="http://and-friend-demo.surge.sh" target="_blank">Here</a>
-                        </p>
+                        And Friend was an assignment to use 'vanilla' Js to make http requests and manipulate the DOM using the Random User API.
+                    </p>
+                    <p>
+                        The idea is that a user can create the illusion of having tons of friends by adding or not adding "friends" from a list of random people that is added at a set interval.
+                    </p>
+                    <p>
+                        Planned additions are a random hobby genereator that will assign each user a random hobby out of a set of 10 hobbies.
+                    </p>
+                    <p>
+                        Check it out live <a href="http://and-friend-demo.surge.sh" target="_blank">Here</a>
+                    </p>
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
-                        <img src="images/js-logo-badge-512-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png"
-                            alt="" />
+                        <img src="images/js-logo-badge-512-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png" alt="" />
                     </div>
                 </div>
                 <div id="vol" class="aboutSection small-12 hidden">
                     <h2>Volunteerism</h2>
                     <a class="githublink" href="https://github.com/rigganhart/volunteerism" target="_blank"><img src="images/logos-github-icon-min.png" alt="" /></a>
                     <p>
-                      This was my first time using Node.js and Hapi. The next step is to learn some basic MongoDB.
-                        </p>
-                        <p>
-The problem with volunteering is everyone has very little free time, and there are so many opportunities to volunteer.                         </p>
-                        <p>
-Volunteerism aims to help people who love to donate their time keep track of all the events they love, and to sign up as well.
-                        </p>
+                        This was my first time using Node.js and Hapi. The next step is to learn some basic MongoDB.
+                    </p>
+                    <p>
+                        The problem with volunteering is everyone has very little free time, and there are so many opportunities to volunteer. </p>
+                    <p>
+                        Volunteerism aims to help people who love to donate their time keep track of all the events they love, and to sign up as well.
+                    </p>
 
                     <div class="techStack">
                         <h5>Front End Stack:</h5>
-                        <img src="images/angularjs-stacked1-min.png" alt="" /><img src="images/nodejs_logo-min.png" alt="" /><img src="images/hapi-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png" alt="" /><img src="images/seal-color-aef0354c-min.png"
-                            alt="" />
+                        <img src="images/angularjs-stacked1-min.png" alt="" /><img src="images/nodejs_logo-min.png" alt="" /><img src="images/hapi-min.png" alt="" /><img src="images/CSS3_and_HTML5_badges.svg-min.png" alt="" /><img src="images/gulp-min.png"
+                            alt="" /><img src="images/seal-color-aef0354c-min.png" alt="" />
                     </div>
                 </div>
             </div>
         </div>
-    </main>
+        <div class="spacing">
+          <!-- <h1>Wordpress Blogs</h1> -->
+        </div>
+        <!-- <div class="contentProjects">
+          wordpress blogs go here
+        </div> -->
+    </div>
+
 </body>
 
 </html>
