--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="contentProjects">
           <div class="myPic small-4 coluns">
-            <img src="images/Riggan Hart 4_Fotor.jpg" alt="" />
+            <img src="images/Riggan Hart 4_Fotor-min.jpg" alt="" />
           </div>
           <p class="small-6 columns">
             I studied Advertising at Appalachian State University where I received my BS in Communications in 2007. I then worked in automotive sales and as an independent life insurance agent. In 2009 I decided to pursue my love for the outdoors and moved to Vail, Colorado working as a snowboarding instructor for Vail Resorts. During the summers in Vail, I worked as a banquet server for the resort. In 2014 my fiancé and I decided to move to Charleston, SC to be closer to family. I decided to make a career change from hospitality to computer programming for a more stable lifestyle which led me to my studies at The Iron Yard Charleston where I completed the Front End Engineering program in August 2016.
