fixed email link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="contact">
 
                     <h6>P: 757-641-8422</h6>
-                    <h6>E: <a href="mailto:rigganh@gmail.com?subject=I%20enjoyed%20your%20resume%20"></a></h6>
+                    <h6>E: <a href="mailto:rigganh@gmail.com?subject=I%20enjoyed%20your%20resume%20">rigganh@gmail.com</a></h6>
                 </div>
                 <h3>Solving problems through programming</h3>
             </div>
