--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Riggan Hart is a JavaScript programmer who specializes in responsive web development">
+    <meta name="keywords" content="Riggan Hart, Riggan, programmer, web design, JavaScript, javascript, JS, AngularJS, web developer, responsive, ">
     <title>Riggan Hart</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
@@ -14,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 
-    <script src="app.js" type="text/javascript"></script>
+    <!-- <script src="app.js" type="text/javascript"></script> -->
 </head>
 
 <body>
