--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- <script src="app.js" type="text/javascript"></script> -->
+    <script src="app.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -46,10 +46,10 @@
             <h1>About Me</h1>
         </div>
         <div class="contentProjects">
-          <div class="myPic small-4 coluns">
+          <div class="myPic small-10-centered large-4 columns">
             <img src="images/Riggan Hart 4_Fotor-min.jpg" alt="" />
           </div>
-          <p class="small-6 columns">
+          <p class="small-10-centered large-6 columns">
             I studied Advertising at Appalachian State University where I received my BS in Communications in 2007. I then worked in automotive sales and as an independent life insurance agent. In 2009 I decided to pursue my love for the outdoors and moved to Vail, Colorado working as a snowboarding instructor for Vail Resorts. During the summers in Vail, I worked as a banquet server for the resort. In 2014 my fiancé and I decided to move to Charleston, SC to be closer to family. I decided to make a career change from hospitality to computer programming for a more stable lifestyle which led me to my studies at The Iron Yard Charleston where I completed the Front End Engineering program in August 2016.
           </p>
         </div>
